# gamedev-experiments-sdl2-c

./: .clang-format  .envrc  .gitignore  README.md  build  conanfile.py  install  main.c  meson.build  mkpackage
.task/: backlog.data  completed.data  pending.data  undo.data
.zk/: config.toml
docs/.zk/: config.toml
docs/architecture/decisions/: README.md
docs/decisions/: 0001-entity-motion-is-controlled-via-internal-velocity.md
src/: aabb.c  aabb.h  alloc.h  app.c  app.h  field.c  field.h  fsm.c  fsm.h  game.c  game.h  graphics.c  graphics.h  main.c  physics.c  physics.h  player.c
src/app/: app.c  app.h  video.c  video.h
src/entities/: ball.c  ball.h  entity.c  entity.h  paddle.c  paddle.h
src/fsm/: fsm.c  fsm.h
src/fsm/test/: smoke.c  test.h
src/game/: actions.c  actions.h  ball.c  ball.h  collision.c  collision.h  entity.c  entity.h  field.c  field.h  game.c  game.h  paddle.c  paddle.h  player.h
util/: timer_util.c  timer_util.h
